--- a/src/tool/CMakeLists.txt
+++ b/src/tool/CMakeLists.txt
@@ -50,7 +50,7 @@ if( BUILD_MAPCACHE )
 	)
 
 	# 设置依赖项目, 这里设置了依赖 breakpad cryptopp-static 这两个项目
-	set( DEPENDENCIES breakpad cryptopp-static )
+	set( DEPENDENCIES breakpad cryptopp-static yaml-cpp )
 
 	# 设置依赖的库文件
 	# 包括 GLOBAL_LIBRARIES, ZLIB_LIBRARIES, 包括依赖项目的库文件
