--- a/src/common/common.vcxproj.filters
+++ b/src/common/common.vcxproj.filters
@@ -95,6 +95,12 @@
     <ClInclude Include="cryptopp.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="translate.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utf8_defines.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cli.cpp">
@@ -173,6 +179,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cryptopp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="translate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
