--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -1,4 +1,4 @@
-Header:
+ï»¿Header:
   Type: CONSOLE_TRANSLATE_DB
   Version: 1
 
@@ -524,7 +524,7 @@ Body:
 - Original: "Git Hash: '[{CL_WHITE}]%s[{CL_RESET}]'\n"
   Translation: ""
 - Original: "Pandas Version: [{CL_WHITE}]%s[{CL_RESET}]\n"
-  Translation: "ºµ¿ß¼ÒÀÀ¾¹·í«eª©¥»¸¹: [{CL_WHITE}]%s[{CL_RESET}]\n"
+  Translation: "ç†Šè²“æ¨¡æ“¬å™¨ç•¶å‰ç‰ˆæœ¬è™Ÿ: [{CL_WHITE}]%s[{CL_RESET}]\n"
 - Original: "This program is completely free! You don't need to pay for it.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
@@ -1054,7 +1054,7 @@ Body:
 - Original: "Console translation system was deactivated.\n"
   Translation: ""
 - Original: "Console translation initialized: [{CL_WHITE}]'%s'[{CL_RESET}].\n"
-  Translation: "²×ºİÂ½Ä¶¾÷¨îªì©l¤Æ§¹²¦: [{CL_WHITE}]'%s'[{CL_RESET}].\n"
+  Translation: "çµ‚ç«¯ç¿»è­¯æ©Ÿåˆ¶åˆå§‹åŒ–å®Œç•¢: [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
   Translation: ""
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
