尝试修正在 Appveyor 持续集成提示的错误讯息

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -524,7 +524,7 @@ Body:
 - Original: "Git Hash: '[{CL_WHITE}]%s[{CL_RESET}]'\n"
   Translation: ""
 - Original: "Pandas Version: [{CL_WHITE}]%s[{CL_RESET}]\n"
-  Translation: "熊貓模擬器當前版本號: [{CL_WHITE}]%s[{CL_RESET}]\n"
+  Translation: "模擬器當前版本號: [{CL_WHITE}]%s[{CL_RESET}]\n"
 - Original: "This program is completely free! You don't need to pay for it.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
@@ -794,21 +794,21 @@ Body:
 - Original: "Empty string passed to _vShowMessage().\n"
   Translation: ""
 - Original: "[{CL_GREEN}][Status][{CL_RESET}]:"
-  Translation: ""
+  Translation: "[{CL_GREEN}][狀態][{CL_RESET}]:"
 - Original: "[{CL_MAGENTA}][SQL][{CL_RESET}]:"
-  Translation: ""
+  Translation: "[{CL_MAGENTA}][數據][{CL_RESET}]:"
 - Original: "[{CL_WHITE}][Info][{CL_RESET}]:"
-  Translation: ""
+  Translation: "[{CL_WHITE}][訊息][{CL_RESET}]:"
 - Original: "[{CL_WHITE}][Notice][{CL_RESET}]:"
-  Translation: ""
+  Translation: "[{CL_WHITE}][提示][{CL_RESET}]:"
 - Original: "[{CL_YELLOW}][Warning][{CL_RESET}]:"
-  Translation: ""
+  Translation: "[{CL_YELLOW}][警告][{CL_RESET}]:"
 - Original: "[{CL_CYAN}][Debug][{CL_RESET}]:"
-  Translation: ""
+  Translation: "[{CL_CYAN}][調試][{CL_RESET}]:"
 - Original: "[{CL_RED}][Error][{CL_RESET}]:"
-  Translation: ""
+  Translation: "[{CL_RED}][錯誤][{CL_RESET}]:"
 - Original: "[{CL_RED}][Fatal Error][{CL_RESET}]:"
-  Translation: ""
+  Translation: "[{CL_RED}][致命][{CL_RESET}]:"
 - Original: "In function _vShowMessage() -> Invalid flag passed.\n"
   Translation: ""
 - Original: "set_nonblocking: Failed to set socket #%d to non-blocking mode (%s) - Please report this!!!\n"
@@ -1054,7 +1054,7 @@ Body:
 - Original: "Console translation system was deactivated.\n"
   Translation: ""
 - Original: "Console translation initialized: [{CL_WHITE}]'%s'[{CL_RESET}].\n"
-  Translation: "終端翻譯機制初始化完畢: [{CL_WHITE}]'%s'[{CL_RESET}].\n"
+  Translation: "控制台訊息翻譯機制初始化完畢: [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
   Translation: ""
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
