完成部分常见的控制台提示讯息的汉化

--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -18,14 +18,14 @@ passwd: p1
 //
 // 注意: 请不要使用空格以及 \/:*?"<>| 这几个特殊字符
 //       ... 否则可能导致公会图标无法在客户端正常显示!
-server_name: 熊猫模拟器
+server_name: Pandas Server
 
 // 当服务器由于某些功能需要私聊玩家发消息时,
 // 会以下面设定的名义来发送, 长度必须在 4~23 个字符之间
 //
 // 例如: 有个商人已经离线挂店了, 此时你去私聊这个商人对他发消息, 
 //       那么系统会以这个选项配置的名义, 自动给你回复一则私聊信息, 说对方不在线. 
-wisp_server_name: 伺服器
+wisp_server_name: Server
 
 // 登录服务器的 IP 地址
 // 角色服务器会依赖这个 IP 地址去和登录服务器建立连接.
